--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
+/* Font Imports */
 @font-face {
     font-family: Poppins;
     src: url(Poppins-Regular.ttf);
   }
   
-
+/* Main Styles */
 body {
     margin:0px;
 }
@@ -12,13 +13,12 @@ main {
     margin: 0px;
     font-family:Poppins;
     font-weight:lighter;
-    color:white;
 }
+/* Container Styles */
 #left-container {
     height: 100vh;
     width: 50vw;
     background-color: #3a3939;
-    padding: 5px;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -28,6 +28,7 @@ main {
     width: 50vw;
     background-color: lightgray;
 }
+/* Navigation Styles */
 #nav-bar {
     display: flex;
     background-color: #3a3939;
@@ -37,13 +38,26 @@ nav ul {
     align-self: flex-end;
     display:flex;
     flex-direction:row;
+    justify-content: flex-end;
+    width:100%;
+    padding:0em 3em;
     list-style-type:none;
-    text-decoration: none;
     text-transform: uppercase;
     text-shadow: lightyellow;
 }
 li a{
     color:white;
-    padding:5px;
-    
+    padding:5px;    
+    text-decoration: none;
 } 
+#main-inputs {
+    font-size: 14pt;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-evenly;
+    align-items:center;
+}
+#main-inputs input{
+    height: 30px;
+    font-size: 14pt;
+}
