--- a/styles.css
+++ b/styles.css
@@ -9,37 +9,41 @@ body {
     margin:0px;
 }
 main {
-    display:flex;
+    display:grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 7% auto;
+    height: 100vh;
     margin: 0px;
     font-family:Poppins;
     font-weight:lighter;
 }
 /* Container Styles */
 #left-container {
-    height: 100vh;
-    width: 50vw;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
     background-color: #3a3939;
     display:flex;
     justify-content:center;
     align-items:center;
   }
 #right-container {
-    height: 100vh;
-    width: 50vw;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
     background-color: lightgray;
 }
 /* Navigation Styles */
 #nav-bar {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
     display: flex;
     background-color: #3a3939;
-
 }
 nav ul {
-    align-self: flex-end;
     display:flex;
     flex-direction:row;
     justify-content: flex-end;
-    width:100%;
+    align-items:center;
+    width: 100%;
     padding:0em 3em;
     list-style-type:none;
     text-transform: uppercase;
@@ -54,7 +58,6 @@ li a{
     font-size: 14pt;
     display:flex;
     flex-direction:column;
-    justify-content:space-evenly;
     align-items:center;
 }
 #main-inputs input{
