--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,12 @@ li a{
     display:flex;
     flex-direction:column;
     align-items:center;
+    padding-top:100px;
 }
 #main-inputs input{
     height: 30px;
     font-size: 14pt;
+}
+#last-name-container {
+    padding-top:50px;
 }
